--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,35 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.3.4",
+    "d3": "^7.8.2",
+    "plotly.js": "^2.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "d3": "^7.8.2",
-    "plotly.js": "^2.22.0",
-    "tailwindcss": "^3.3.1",
-    "axios": "^1.3.4"
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
-    "prettier": "^2.8.4",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "prettier": "^2.8.4",
+    "react-scripts": "5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
